@@ -66,7 +66,7 @@ string WorkerBase::_get_archives_directory() const
 string WorkerBase::_get_archive_basename(const BinaryVersion* version)
 {
 	return version->packageName + '_' +
-			versionstring::getOriginal(version->versionString).toStdString()
+			getOriginalVersionString(version->versionString).toStdString()
 			+ '_' + version->architecture + ".deb";
 }
 
